--- a/mapbox-gl-draw/package.json
+++ b/mapbox-gl-draw/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@ttfn/mapbox-gl-draw",
-  "version": "1.4.2-beta.62",
+  "version": "1.4.2-beta.66",
   "description": "A drawing component for Mapbox GL JS",
-  "homepage": "https://github.com/mapbox/mapbox-gl-draw",
+  "homepage": "",
   "author": "mapbox",
   "license": "ISC",
   "private": false,
-  "main": "dist/mapbox-gl-draw.js",
-  "browser": "dist/mapbox-gl-draw.js",
+  "main": "dist/mapbox-gl-draw.umd.min.js",
+  "browser": "dist/mapbox-gl-draw.umd.min.js",
+  "module": "dist/mapbox-gl-draw.es.min.js",
   "style": "dist/mapbox-gl-draw.css",
   "types": "types/index.d.ts",
   "scripts": {
@@ -20,8 +21,10 @@
     "coverage": "NODE_ENV=test nyc --reporter html npm run tape && opener coverage/index.html",
     "build-token": "node build/generate-access-token-script.js",
     "build": "rollup -c",
+    "build-es": "rollup -c --environment ES:true",
     "build-min": "rollup -c --environment MINIFY:true",
-    "prepublishOnly": "run-s build build-min",
+    "build-min-es": "rollup -c --environment MINIFY:true --environment ES:true",
+    "prepublishOnly": "run-s build build-es build-min build-min-es",
     "watch": "rollup -c --watch",
     "watch-bench": "rollup -c bench/rollup.config.js --watch",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9967 --index index.html .",
@@ -38,7 +41,7 @@
     "drawing"
   ],
   "bugs": {
-    "url": "https://github.com/fantienan/mapbox-extend/issues"
+    "url": ""
   },
   "nyc": {
     "sourceMap": false,
